k8s/overlays/staging/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mesa-web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: mesa-web
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 192Mi
